// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`correctly accepts the credentials cleans any error presented 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Image
    resizeMode="contain"
    source={
      Object {
        "process": [Function],
      }
    }
    style={
      Object {
        "height": "30%",
        "marginBottom": "40px",
      }
    }
  />
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    onKeyPress={[Function]}
    rejectResponderTermination={true}
    underlineColorAndroid="transparent"
    value="a"
  />
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    onKeyPress={[Function]}
    rejectResponderTermination={true}
    underlineColorAndroid="transparent"
    value="d"
  />
  <Text
    testID="error"
  >
     
    The password needs to have at least 6 chars
     
  </Text>
  <View
    accessible={true}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#EA1D2C",
        "borderRadius": 5,
        "margin": "15px",
        "marginHorizontal": "20px",
        "padding": "20px",
      }
    }
    testID="loginButton"
  >
    <Text
      style={
        Object {
          "color": "#FFF",
          "fontSize": 16,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      Login
    </Text>
  </View>
</View>
`;

exports[`correctly accepts the credentials cleans any error presented 2`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Image
    resizeMode="contain"
    source={
      Object {
        "process": [Function],
      }
    }
    style={
      Object {
        "height": "30%",
        "marginBottom": "40px",
      }
    }
  />
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    onKeyPress={[Function]}
    rejectResponderTermination={true}
    underlineColorAndroid="transparent"
    value="a"
  />
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    onKeyPress={[Function]}
    rejectResponderTermination={true}
    underlineColorAndroid="transparent"
    value="d"
  />
  <View
    accessible={true}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#EA1D2C",
        "borderRadius": 5,
        "margin": "15px",
        "marginHorizontal": "20px",
        "padding": "20px",
      }
    }
    testID="loginButton"
  >
    <Text
      style={
        Object {
          "color": "#FFF",
          "fontSize": 16,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      Login
    </Text>
  </View>
</View>
`;

exports[`renders correctly 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Image
    resizeMode="contain"
    source={
      Object {
        "process": [Function],
      }
    }
    style={
      Object {
        "height": "30%",
        "marginBottom": "40px",
      }
    }
  />
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    onKeyPress={[Function]}
    rejectResponderTermination={true}
    underlineColorAndroid="transparent"
    value=""
  />
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    onKeyPress={[Function]}
    rejectResponderTermination={true}
    underlineColorAndroid="transparent"
    value=""
  />
  <View
    accessible={true}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#EA1D2C",
        "borderRadius": 5,
        "margin": "15px",
        "marginHorizontal": "20px",
        "padding": "20px",
      }
    }
    testID="loginButton"
  >
    <Text
      style={
        Object {
          "color": "#FFF",
          "fontSize": 16,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      Login
    </Text>
  </View>
</View>
`;

exports[`tries to log in the user too short password was inserted 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Image
    resizeMode="contain"
    source={
      Object {
        "process": [Function],
      }
    }
    style={
      Object {
        "height": "30%",
        "marginBottom": "40px",
      }
    }
  />
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    onKeyPress={[Function]}
    rejectResponderTermination={true}
    underlineColorAndroid="transparent"
    value="a"
  />
  <TextInput
    allowFontScaling={true}
    onChangeText={[Function]}
    onKeyPress={[Function]}
    rejectResponderTermination={true}
    underlineColorAndroid="transparent"
    value="d"
  />
  <Text
    testID="error"
  >
     
    The password needs to have at least 6 chars
     
  </Text>
  <View
    accessible={true}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignSelf": "stretch",
        "backgroundColor": "#EA1D2C",
        "borderRadius": 5,
        "margin": "15px",
        "marginHorizontal": "20px",
        "padding": "20px",
      }
    }
    testID="loginButton"
  >
    <Text
      style={
        Object {
          "color": "#FFF",
          "fontSize": 16,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      Login
    </Text>
  </View>
</View>
`;
